# side-channel-p1

ex1/: CMakeLists.txt  base64.cc  base64.h  client.cc  config.h  generate_secrets.sh  server.cc
ex1/tinycrypt/: tinycrypt.cc  tinycrypt.h
